--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,24 +6,78 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
-    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
     <header>
-      <% if user_signed_in? %>
-        <li>
-          <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
-        </li>
-      <% else %>
-        <li>
-          <%= link_to "新規登録", new_user_registration_path %>
-        </li>
-        <li>
-          <%= link_to "ログイン", new_user_session_path %>
-        </li>
-      <% end %>
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container">
+          <%= link_to "MEIGEN", root_path, class: "navbar-brand" %>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <% if user_signed_in? %>
+              <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                  <%= link_to class: "nav-link text-light" do%>
+                    <i class="fa-solid fa-house"></i>
+                    Home
+                  <% end %>
+                </li>
+                <li class="nav-item">
+                  <%= link_to class: "nav-link text-light" do%>
+                    <i class="fa-solid fa-users"></i>
+                    Users
+                  <% end %>
+                </li>
+                <li class="nav-item">
+                  <%= link_to posts_path, class: "nav-link text-light" do %>
+                    <i class="fa-solid fa-book-open"></i>
+                    Posts
+                  <% end %>
+                </li>
+                <li class="nav-item">
+                  <%= link_to destroy_user_session_path, method: :delete, class: "nav-link text-light" do %>
+                    <i class="fa-solid fa-right-from-bracket"></i>
+                    Log out
+                  <% end %>
+                </li>
+              </ul>
+            <% else %>
+              <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                  <%= link_to root_path, class: "nav-link text-light" do%>
+                    <i class="fa-solid fa-house"></i>
+                    Home
+                  <% end %>
+                </li>
+                <li class="nav-item">
+                  <%= link_to homes_about_path, class: "nav-link text-light" do%>
+                    <i class="fa-solid fa-link"></i>
+                    About
+                  <% end %>
+                </li>
+                <li class="nav-item">
+                  <%= link_to new_user_registration_path, class: "nav-link text-light" do %>
+                    <i class="fa-solid fa-user-plus"></i>
+                    Sign up
+                  <% end %>
+                </li>
+                <li class="nav-item">
+                  <%= link_to new_user_session_path, class: "nav-link text-light" do %>
+                    <i class="fa-solid fa-right-to-bracket"></i>
+                    Log in
+                  <% end %>
+                </li>
+              </ul>
+            <% end %>
+          </div>
+        </div>
+      </nav>
+
     </header>
     <%= yield %>
   </body>
