--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,1 +1,6 @@
 <h1>TOPページです</h1>
+
+<div class="d-flex justify-content-center mt-4">
+  <a href="<%= new_user_session_path %>" class="btn btn-primary mx-2">ログイン</a>
+  <a href="<%= new_user_registration_path %>" class="btn btn-secondary mx-2">サインアップ</a>
+</div>
