--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,9 +28,9 @@
                   <% end %>
                 </li>
                 <li class="nav-item">
-                  <%= link_to class: "nav-link text-light" do%>
+                  <%= link_to user_path(current_user), class: "nav-link text-light" do %>
                     <i class="fa-solid fa-users"></i>
-                    Users
+                    My page
                   <% end %>
                 </li>
                 <li class="nav-item">
