--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,6 +4,12 @@
   <%= image_tag @user.get_profile_image(100,100) %>
 </div>
 
+<div>
+  <% if current_user == @user %>
+    <%= link_to "編集", edit_user_path(@user) %>
+  <% end %>
+</div>
+
 <% @posts.each do |post| %>
   <div>
     <p>投稿者: <%= post.user.name %></p>
