--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,5 +1,17 @@
 <% if user_signed_in? %>
-  <h1>ログイン中</h1>
+  <div class="d-flex justify-content-center align-items-center mt-5 pt-5 top-container">
+    <div class="container text-center">
+      <h1 class="mb-4">ようこそ！</h1>
+      <div class="row justify-content-center">
+        <div class="col-md-3">
+          <%= link_to "投稿一覧", posts_path, class: "btn btn-primary btn-lg btn-block mb-3" %>
+        </div>
+        <div class="col-md-3">
+          <%= link_to "早速投稿する", new_post_path, class: "btn btn-secondary btn-lg btn-block mb-3" %>
+        </div>
+      </div>
+    </div>
+  </div>
 <% else %>
   <div class="container mt-5 pt-5 top-container">
     <div class="row my-3">
