--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,9 +23,9 @@
             <% if user_signed_in? %>
               <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                  <%= link_to class: "nav-link text-light" do%>
-                    <i class="fa-solid fa-house"></i>
-                    Home
+                  <%= link_to root_path, class: "nav-link text-light" do %>
+                    <i class="fa-solid fa-users"></i>
+                    HOME
                   <% end %>
                 </li>
                 <li class="nav-item">
