--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,25 +1,9 @@
-<h1 class="text-center my-4">投稿一覧画面</h1>
 <div class="text-center mb-4">
   <%= link_to '新規投稿', new_post_path, class: 'btn btn-primary' %>
 </div>
 
 <div class="container">
-  <table class="table table-bordered table-striped">
-    <thead class="table-dark">
-      <tr>
-        <th>名言</th>
-        <th>著者</th>
-      </tr>
-    </thead>
-    <tbody>
-      <% @posts.each do |post| %>
-        <tr>
-          <td>
-            <%= link_to post.content, post_path(post) %>
-          </td>
-          <td><%= post.author %></td>
-        </tr>
-      <% end %>
-    </tbody>
-  </table>
+  <div class="row">
+    <%= @random_post.content %>
+    <%= @random_post.author %>
 </div>
