--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,7 +37,7 @@
                 <li class="nav-item">
                   <%= link_to posts_path, class: "nav-link text-light" do %>
                     <i class="fa-solid fa-book-open"></i>
-                    Posts
+                    Post
                   <% end %>
                 </li>
                 <li class="nav-item">
