--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,12 +1,37 @@
-<div class="text-center mb-4">
-  <%= link_to '新規投稿', new_post_path, class: 'btn btn-primary' %>
-</div>
-
-<div class="container">
-  <div class="row">
-    <%= @random_post.content %> 
-    <%= @random_post.author %>
+<% if @random_post %>
+  <div class="container mt-5">
+    <div class="row justify-content-center">
+      <div class="col-lg-8 col-md-10 col-12">
+        <%= link_to post_path(@random_post), class: "text-decoration-none" do %>
+          <div class="card m-3 p-4 rounded-3 shadow-lg">
+            <div class="container">
+              <div class="row align-items-center">
+                <div class="col-auto">
+                  <%= image_tag @random_post.user.get_profile_image(75, 75), class: "rounded-circle", style: "width: 75px; height: 75px;" %>
+                </div>
+                <div class="col">
+                  <h5 class="mb-0"><%= @random_post.user.name %></h5>
+                </div>
+              </div>
+              <div class="card-body">
+                <div class="row my-3">
+                  <div class="col-md-12">
+                    <p class="card-text text-muted"><%= @random_post.content %></p>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col text-end">
+                    <small class="text-muted"><%= @random_post.author %></small>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        <% end %>
+      </div>
+    </div>
   </div>
   <div class="row">
-    <%= link_to '次へ', posts_path(id: @random_post.id), class: 'btn btn-primary' %>
-</div>
+      <%= link_to '次へ', posts_path(id: @random_post.id), class: 'btn btn-primary' %>
+    </div>
+<% end %>
