--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,37 +1,45 @@
-<% if @random_post %>
-  <div class="container mt-5">
-    <div class="row justify-content-center">
-      <div class="col-lg-8 col-md-10 col-12">
-        <%= link_to post_path(@random_post), class: "text-decoration-none" do %>
-          <div class="card m-3 p-4 rounded-3 shadow-lg">
-            <div class="container">
-              <div class="row align-items-center">
-                <div class="col-auto">
-                  <%= image_tag @random_post.user.get_profile_image(75, 75), class: "rounded-circle", style: "width: 75px; height: 75px;" %>
-                </div>
-                <div class="col">
-                  <h5 class="mb-0"><%= @random_post.user.name %></h5>
-                </div>
-              </div>
-              <div class="card-body">
-                <div class="row my-3">
-                  <div class="col-md-12">
-                    <p class="card-text text-muted"><%= @random_post.content %></p>
-                  </div>
-                </div>
-                <div class="row">
-                  <div class="col text-end">
-                    <small class="text-muted"><%= @random_post.author %></small>
-                  </div>
-                </div>
-              </div>
+<header class="shadow-sm p-3">
+  <div class="container px-5">
+    <div class="row align-items-center">
+      <div class="col-2 d-flex justify-content-center">
+        <%= link_to edit_user_path(current_user) do %>
+          <%= image_tag @user.get_profile_image(110, 110), class: "rounded-circle head-icon" %>
+        <% end %>
+      </div>
+
+      <div class="col-6">
+        <h1 class="mb-1">MEIGEN</h1>
+        <p class="text-muted small">あなたの心に残っている名言を投稿しよう</p>
+      </div>
+
+      <div class="col-4">
+        <div class="row d-flex justify-content-end">
+          <%= link_to "POST A QUOTE", new_post_path, class: "btn btn-secondary m-2 rounded-pill head-btn" %>
+          <%= link_to "MY POST", user_path(current_user), class: "btn btn-light m-2 rounded-pill head-btn" %>
+        </div>
+      </div>
+    </div>
+  </div>
+</header>
+
+<main>
+  <div class="container-fluid p-4 main-out-line">
+    <div class="row">
+      <div class="col-2">
+        <%= link_to "POST A QUOTE", new_post_path, class: "btn btn-secondary m-3 py-4 rounded-pill head-btn" %>
+        <%= link_to "POST A QUOTE", new_post_path, class: "btn btn-secondary m-3 py-4 rounded-pill head-btn" %>
+        <%= link_to "POST A QUOTE", new_post_path, class: "btn btn-secondary m-3 py-4 rounded-pill head-btn" %>
+        <%= link_to "REROAD", posts_path, class: "btn btn-secondary m-3 py-4 rounded-pill head-btn" %>
+      </div>
+      <div class="col-10 d-flex flex-wrap px-5">
+        <% @posts.each do |post| %>
+          <%= link_to post_path(post), class: "post-card  mb-3" do %>
+            <div class="card <%= 'card-3n' if post.id % 3 == 0 %> <%= 'card-2n' if post.id % 3 == 1 %>">
+              <p><%= post.id %></p>
             </div>
-          </div>
+          <% end %>
         <% end %>
       </div>
     </div>
   </div>
-  <div class="row">
-      <%= link_to '次へ', posts_path(id: @random_post.id), class: 'btn btn-primary' %>
-    </div>
-<% end %>
+</main>
