--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -8,8 +8,17 @@
       <div class="mb-3">
         <p><%= @post.author %></p>
       </div>
+      <% if @post.favorited_by?(current_user) %>
+        <%= link_to post_favorites_path(@post), method: :delete do%>
+          ❤️<%= @post.favorites.count %>いいね
+        <% end %>
+      <% else %>
+        <%= link_to post_favorites_path(@post), method: :post do%>
+          ❤️<%= @post.favorites.count %>いいね
+        <% end %>
+      <% end %>
       <div class="mb-3 text-center">
-        <%= link_to 'Back', '#', class: 'btn btn-outline-primary', onclick: 'window.history.back(); return false;' %>
+        <%= link_to 'Back', posts_path, class: 'btn btn-outline-secondary' %>
         <% if current_user.id == @post.user_id %>
           <%= link_to 'Edit', edit_post_path(@post), class: 'btn btn-outline-primary' %>
           <%= link_to 'Delete', post_path(@post), method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-outline-danger' %>
