--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -34,8 +34,8 @@
         </div>
         <div class="col-10 d-flex flex-wrap px-5">
           <% @posts.each do |post| %>
-            <%= link_to post_path(post), class: "post-card  mb-3 text-decoration-none" do %>
-              <div class="card">
+            <div class="post-card mb-3 text-decoration-none">
+              <%= link_to post_path(post), class: "card" do %>
                 <div class="container-fluid p-3">
                   <div class="row">
                     <div class="col-2">
@@ -58,10 +58,24 @@
                     </div>
                   </div>
                 </div>
+              <% end %>
+
+              <!-- いいねボタン -->
+              <div class="like-button text-center">
+                <% if post.favorited_by?(current_user) %>
+                  <%= link_to post_favorites_path(post), method: :delete, class: "like-btn" do %>
+                    ♥ <%= post.favorites.count %> いいね
+                  <% end %>
+                <% else %>
+                  <%= link_to post_favorites_path(post), method: :post, class: "like-btn" do %>
+                    ♡ <%= post.favorites.count %> いいね
+                  <% end %>
+                <% end %>
               </div>
-            <% end %>
+            </div>
           <% end %>
         </div>
+
       </div>
     </div>
   <% end %>
